<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Student Assistance Manager</string>
    <!-- Main Menu Labels -->
    <string name="MM_Event_Title">Next Assignment:</string>
    <string name="MM_Event_Name">Assignment Name: </string>
    <string name="MM_Event_DueDate">Due Date: </string>
    <string name="MM_Event_Duration">Duration: </string>
    <string name="MM_Event_Desc">Description: </string>
    <string name="MM_Transaction_Title">Last Transaction:</string>

    <!-- Menu item labels -->
    <string name="Menu_Calendar">Calendar</string>
    <string name="Menu_Budget">Budget</string>
    <string name="Menu_Settings">Settings</string>
    <string name="Menu_Home">Home</string>
    <string name="Menu_Goals">Goals</string>
    <string name="Menu_Transaction">Add Transaction</string>
    <string name="Menu_Records">Records</string>
    <string name="Menu_SeeTransactions">View Transactions</string>

    <!-- Calendar Labels -->
    <string name="Title_Calendar">Calendar</string>
    <string name="Create_Event_Button">Create Assignment</string>
    <string name="Show_All_Events">Show All Assignment</string>
    <string name="Cancel_Event_Button">Cancel</string>
    <string name="Edit_Event">Edit Assignment</string>

    <string name="Event_Name">Assignment Name: </string>
    <string name="Event_Due_Date">Due Date: </string>
    <string name="Event_Duration">Duration: </string>
    <string name="Event_Description">Description</string>
    <string name="Time_Due">Time Due: </string>
    <string name="Date_Due">Due Date:</string>


    <string name="Assignment_Complete">Complete: </string>
    <string name="Button_Edit">Edit</string>
    <string name="Button_Cancel">Cancel</string>

    <string name="Title_All_Events">All Assignments</string>

    <!-- Budget Labels -->
    <string name="BH_Last_Transaction">Last Transaction</string>
    <string name="AT_New_Trans">New Transaction</string>

    <string name="Transaction_Date_Hint">Transaction Date*</string>
    <string name="Transaction_Amount_Hint">Amount ($)*</string>
    <string name="Payment_Label">Payment</string>
    <string name="Category_Label">Goal</string>
    <string name="Notes_Hint">Notes</string>
    <string name="Save_Button">Save</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- settings Labels -->
    <string name="btnClearCal">btnClearCal</string>
    <string name="btnClearBud">btnClearBud</string>
    <string name="TdiaClearCal">Delete Calendar Data</string>
    <string name="MdiaClealCal">Are you sure you want to delete all Calendar Data?</string>
    <string name="TdiaClearBud">Delete Budget Data</string>
    <string name="MdiaClealBud">Are you sure you want to delete all Budget Data?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Transaction Details -->
    <string name="Transaction_Details_Amount">Amount</string>
    <string name="Transaction_Details_Goal">Goal</string>
    <string name="Edit_Transaction">Edit Transaction</string>
    <string name="Delete_Transaction">Delete Transaciton</string>


</resources>